--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </tr>
             <tr>
                 <td>Leonardo Grando</td>
-                <td><a href="https://proflgrando.github.io/" target="_blank">WebSite</a></td>
+                <td><a href="https://Olukyr.github.io/" target="_blank">WebSite</a></td>
                 <td><a href="https://github.com/proflgrandoEPT" target="_blank">GitHub</a></td>
             </tr>
 
