--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <tr>
                 <td>Leonardo Grando</td>
                 <td><a href="https://Olukyr.github.io/" target="_blank">WebSite</a></td>
-                <td><a href="https://github.com/proflgrandoEPT" target="_blank">GitHub</a></td>
+                <td><a href="https://github.com/Olukyr" target="_blank">GitHub</a></td>
             </tr>
 
 
