--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </tr>
             <tr>
                 <td>Leonardo Grando</td>
-                <td><a href="https://Olukyr.github.io/" target="_blank">WebSite</a></td>
-                <td><a href="https://github.com/Olukyr" target="_blank">GitHub</a></td>
+                <td><a href="https://Lgrando.github.io/" target="_blank">WebSite</a></td>
+                <td><a href="https://github.com/Lgrando" target="_blank">GitHub</a></td>
             </tr>
 
 
